# RevenueEdge

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PHASE_1_CHECKLIST.md  PHASE_2_CHECKLIST.md  PHASE_3_CHECKLIST.md  PHASE_4_CHECKLIST.md  PHASE_5_CHECKLIST.md  PLAN.md  README.md  REUSE_MAP.md  SKILL.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: auth.py  config.py  db.py  errors.py  logging_config.py  main.py  monitoring.py  pii_filter.py  trace.py
apps/api/app/routes/: bookings.py  businesses.py  channels.py  conversations.py  health.py  integrations.py  knowledge.py  knowledge_ingest.py  leads.py  metrics.py  queue.py  quotes.py  reactivation.py  services.py  tasks.py  uploads.py
apps/api/app/services/: daily_summary.py  metrics_rollup.py  scheduler.py
apps/webhooks/: Dockerfile  pyproject.toml  requirements.txt
apps/webhooks/app/: enqueue.py  main.py  retell.py  settings.py
apps/workers/: Dockerfile  pyproject.toml  requirements.txt
apps/workers/src/: base.py  logging_setup.py  main.py  settings.py  supabase_client.py
apps/workers/src/lib/: channels.py  contacts.py  conversations.py  doc_parser.py  google_calendar.py  hours.py  knowledge.py  leads.py  llm.py  phone.py  rate_limit.py  reactivation.py  templates.py  text_chunker.py  web_scraper.py
apps/workers/src/providers/: email.py  sms.py
apps/workers/src/workers/: booking_worker.py  conversation_intelligence.py  followup_scheduler.py  handoff.py  inbound_normalizer.py  knowledge_ingestion.py  outbound_action.py  quote_drafting.py
(+59 files in other folders)
