[project]
name = "re-workers"
version = "0.1.0"
description = "Revenue Edge background workers"
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.8.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",
  "sentry-sdk>=2.14.0",
  "tenacity>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
